--- a/style.css
+++ b/style.css
@@ -3,8 +3,14 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: beige;
   margin: 0;
+  background-image: url('https://scriptsender.com/wp-content/uploads/impossible-landing-page-background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  height: 100vh;
+  padding-top: 5%;
 }
 
 .header-wrapper {
@@ -20,7 +26,7 @@ body {
   position: relative;
   display: inline-block;
   animation: glitch 1s infinite;
-  opacity: 0.6;
+  opacity: 0.8;
 }
 
 @keyframes glitch {
@@ -46,8 +52,10 @@ span {
   font-size: 48px;
   top: 29px;
   position: relative;
-  color: green;
+  color: yellow;
+  box-shadow: 0px 4px 24px rgba(0, 0, 0, 55.2);
 }
+
 
 .hide {
   opacity: 0;
@@ -56,15 +64,16 @@ span {
 h2 {
   left: -16%;
   position: relative;
-  top: 0.7rem;
+  top: 1.7rem;
   opacity: 0.5;
+  color: cyan;
 }
 
 .sidebar {
   position: fixed;
   right: 20px;
   top: 30%;
-  transition: transform 0.5s ease; /* Add a transition for a slower sidebar toggle */
+  transition: transform 0.5s ease;
   transform: translateX(100%);
 }
 
@@ -99,24 +108,29 @@ h2 {
   margin-bottom: 3px;
 }
 
+.sidebar #home,
 .sidebar #bookme,
 .sidebar #contact,
 .sidebar #aboutme {
   border: 1px solid;
   padding: 3px;
-  border-radius: 5px;
+  border-radius: 0.2rem;
+  text-align: center;
 }
 
+.sidebar #home:hover,
 .sidebar #bookme:hover,
 .sidebar #contact:hover,
 .sidebar #aboutme:hover {
   background-color: sandybrown;
 }
 
+.sidebar #home a,
 .sidebar #bookme a,
 .sidebar #contact a,
 .sidebar #aboutme a {
   text-decoration: none;
+  color: yellow;
 }
 
 .letter {
@@ -139,7 +153,7 @@ footer {
 
 @media (min-width: 360px) and (max-width: 767px) {
   .header-wrapper {
-    top: -40%;
+    top: -48%;
     text-align: center;
   }
   h2 {
@@ -150,9 +164,13 @@ footer {
   }
   .letter {
     margin: 0 20px;
+    top: 16%;
   }
   .sidebar.open {
     z-index: 1;
+  }
+  body {
+    height: 205vh;
   }
 }
 
