--- a/bookme.css
+++ b/bookme.css
@@ -137,7 +137,8 @@ input {
 
 @media (min-width: 360px) and (max-width: 767px) {
   .wrapper {
-    margin: 0;
+    margin: 0 auto;
+    width: 300px;
   }
 }
 
