--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ span {
   top: 29px;
   position: relative;
   color: yellow;
-  box-shadow: 0px 4px 24px rgba(0, 0, 0, 55.2);
+  box-shadow: 0px 4px 24px rgba(158 193 198);
 }
 
 
@@ -155,6 +155,15 @@ h2 {
   position: relative;
   top: 90px;
   flex-wrap: wrap;
+}
+
+#timer {
+  display: none;
+  position: absolute;
+    top: 19px;
+    right: 19px;
+    font-size: 40px;
+    color: wheat;
 }
 
 footer {
